<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhotoMap</string>
    <string name="address_separator">", "</string>
    <string name="loading">""</string>
    <string name="display_on_map">display on map</string>
    <string name="oldest">oldest first</string>
    <string name="newest">newest first</string>
    <string name="no_position_data">This image has no position data.</string>
    <string name="share">Share image</string>
    <string name="search_map">search location</string>
    <string name="location_not_found">%1$s was not found.</string>
    <string name="search_title">%1$s is …</string>
    <string name="filtered">Filtered by %1$s</string>
    <string name="search_list">search by address</string>
    <string name="change_distance">change distance</string>
    <string name="google_maps_key" translatable="false">AIzaSyCrR_m4U-5N5hqvUyCqF3jtmIcnRCk-5Yg</string>
    <string name="clear_search_history">clear search history</string>
    <string name="clear_cache_data">delete cache data</string>
    <string name="show_about">About</string>
    <string name="about_software">%1$s is built using open source software.</string>
    <string name="about">about</string>
    <string name="overflow" translatable="false">overflow</string>
    <string name="request_permission">Please enable Storage permission.</string>
    <string name="setting">Setting</string>
    <string-array name="oss" translatable="false">
        <item>Ollie</item>
        <item>RxJava</item>
        <item>RxAndroid</item>
    </string-array>
</resources>
