<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/newest"
        android:title="@string/newest"/>
    <item
        android:id="@+id/oldest"
        android:title="@string/oldest"/>
    <item
        android:id="@+id/distance"
        android:title="@string/change_distance"
        appcompat:actionProviderClass="net.mmho.photomap2.DistanceActionProvider">
        <menu>
        </menu>
    </item>
    <item android:id="@+id/about"
        android:title="@string/show_about"/>
    <item
        android:id="@+id/search"
        android:title="@string/search_map"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        appcompat:showAsAction="collapseActionView|ifRoom"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        />
</menu>